--- a/sass/modules/post-card/_post-card.scss
+++ b/sass/modules/post-card/_post-card.scss
@@ -209,6 +209,9 @@
   @include sm{
     padding: 20px;
   }
+  @include lg{
+    padding: 20px;
+  }
 
   &:hover {
     // Post Image
